Fix : correcting animation of infocard element - making hidden and isVisible class working together

--- a/src/style/components/infoCard.module.scss
+++ b/src/style/components/infoCard.module.scss
@@ -47,6 +47,9 @@
       z-index: -100;
       opacity: 0;
       transition: opacity 0.3s ease;
+      @include for-big-desktop-up{
+        font-size: 1.2rem;
+      }
       &_hidden {
         opacity: 1;
         transition: opacity 0.3s ease;
